Tue Dec 10 18:16:09 2013  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* man/ruby.1: [DOC] Use www.ruby-toolbox.com instead of RAA.

Tue Dec 10 17:21:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (wmap_finalize, wmap_aset_update): use simple malloced array
	  instead of T_ARRAY, to reduce GC pressure.

Tue Dec 10 15:56:48 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (reflist_add): revert changes from r44109. it is unnecessary
	  after r44113
	* gc.c (allrefs_i): fix whitespace
	* gc.c (allrefs_roots_i): fix whitespace

Tue Dec 10 15:46:03 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (allrefs_add): push obj only if allrefs table doesn't have
	  obj.

	* gc.c (allrefs_roots_i): ditto.

Tue Dec 10 15:28:10 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (RGENGC_CHECK_MODE): separate checkers to different modes.
	  * 2: enable generational bits check (for debugging)
	  * 3: enable livness check
	  * 4: show all references

Tue Dec 10 15:15:37 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_marks_check): disable GC during checking and
	  restore malloc_increase info.

Tue Dec 10 14:41:53 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (reflist_add): return 0 if reference already exists
	* gc.c (allrefs_add): return 1 on newly added references
	* gc.c (allrefs_i): follow references to construct complete object
	  graph. before this patch, RGENGC_CHECK could fail to verify some WB
	  miss issues. [Bug #9226] [ruby-core:58959]

Tue Dec 10 11:20:56 2013  Aman Gupta <ruby@tmm1.net>

	* ext/objspace/objspace_dump.c (dump_object): include fstring flag on
	  strings. include gc flags (old, remembered, wb_protected) on all objects.
	* ext/objspace/objspace_dump.c (Init_objspace_dump): initialize lazy
	  IDs before first use.
	* gc.c (rb_obj_gc_flags): new function to retrieve object flags
	* internal.h (RB_OBJ_GC_FLAGS_MAX): maximum flags allowed for one obj
	* test/objspace/test_objspace.rb (test_dump_flags): test for above